--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.26.0",
 		"@types/leaflet": "^1.9.3",
-		"leaflet": "^1.9.4"
+		"leaflet": "^1.9.4",
+		"supabase": "^1.74.2"
 	}
 }
