--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,5 +102,14 @@
 		"track",
 		"width",
 		"zIndex"
+	],
+	"cSpell.words": [
+		"badatelna",
+		"jazykovka",
+		"Navigovatelný",
+		"qrcode",
+		"spinkarna",
+		"Spinkárna",
+		"Váhovna"
 	]
 }
