--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
 		"@supabase/supabase-js": "^2.26.0",
 		"@types/geojson": "^7946.0.10",
 		"@types/leaflet": "^1.9.3",
+		"html5-qrcode": "^2.3.8",
 		"leaflet": "^1.9.4",
-		"supabase": "^1.74.2"
+		"supabase": "^1.74.2",
+		"svelte-qrcode": "^1.0.0"
 	}
 }
