Removed skeleton Added daisyUI Cleaned package.json Changed QR display Started making look good (new GHB) Sorted markers Cut down icons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,12 +105,15 @@
 	],
 	"cSpell.words": [
 		"badatelna",
+		"daisyui",
 		"jazykovka",
+		"latlng",
 		"Navigovatelný",
 		"qrcode",
 		"skeletonlabs",
 		"spinkarna",
 		"Spinkárna",
+		"tailwindcss",
 		"Váhovna"
 	]
 }
