--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.4.2",
-		"@skeletonlabs/skeleton": "^1.8.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"daisyui": "^3.9.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
@@ -43,9 +41,7 @@
 		"@supabase/supabase-js": "^2.26.0",
 		"@types/geojson": "^7946.0.10",
 		"@types/leaflet": "^1.9.3",
-		"html5-qrcode": "^2.3.8",
 		"leaflet": "^1.9.4",
-		"supabase": "^1.74.2",
-		"svelte-qrcode": "^1.0.0"
+		"supabase": "^1.74.2"
 	}
 }
