Added limitations for public text inputs Disabled /loading from being added to history Fixed hidden a visible paths showing Stopped sending unnecessary data to the page Added caching - needs testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,19 +104,21 @@
 		"zIndex"
 	],
 	"cSpell.words": [
-		"badatelna",
-		"daisyui",
-		"disp",
-		"dndzone",
-		"jazykovka",
-		"latlng",
-		"Navigovatelný",
-		"qrcode",
-		"skeletonlabs",
-		"spinkarna",
-		"Spinkárna",
-		"tailwindcss",
-		"textpath",
-		"Váhovna"
-	]
+        "badatelna",
+        "daisyui",
+        "disp",
+        "dndzone",
+        "jazykovka",
+        "latlng",
+        "maxage",
+        "Navigovatelný",
+        "qrcode",
+        "skeletonlabs",
+        "spinkarna",
+        "Spinkárna",
+        "supabase",
+        "tailwindcss",
+        "textpath",
+        "Váhovna"
+    ]
 }
