BUGFIXES and performance IMPROVEMENTS - Changed the way stairs display floor changes to only jump one floor (required when floors are not walkable from one side to the other) - improved some accessibility issues recommended by Lighthouse - Changed image format to webp instead of png and jpg - Changed LinkedIn link - Added robots.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,21 +104,22 @@
 		"zIndex"
 	],
 	"cSpell.words": [
-        "badatelna",
-        "daisyui",
-        "disp",
-        "dndzone",
-        "jazykovka",
-        "latlng",
-        "maxage",
-        "Navigovatelný",
-        "qrcode",
-        "skeletonlabs",
-        "spinkarna",
-        "Spinkárna",
-        "supabase",
-        "tailwindcss",
-        "textpath",
-        "Váhovna"
-    ]
+		"badatelna",
+		"daisyui",
+		"disp",
+		"dndzone",
+		"jazykovka",
+		"latlng",
+		"maxage",
+		"Navigovatelný",
+		"qrcode",
+		"skeletonlabs",
+		"spinkarna",
+		"Spinkárna",
+		"supabase",
+		"tailwindcss",
+		"textpath",
+		"urlset",
+		"Váhovna"
+	]
 }
