Minor improvements, updates and bug fixes Improved MarkerPopup text on 0th and 4th floor Updated meta tag to better describe the project Fixed markers not ordering properly in PathGenerator Fixed incorrect padding in paths generator selection causing it to touch the screen border Changed the way of ordering class rooms related QR code paths to fit the requirements better Removed some useless spacing in code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,14 +105,18 @@
 	],
 	"cSpell.words": [
 		"badatelna",
+		"Bouchalovi",
 		"daisyui",
 		"disp",
 		"dndzone",
+		"Egersdorfové",
+		"Ferenczovi",
 		"jazykovka",
 		"latlng",
 		"maxage",
 		"Navigovatelný",
 		"qrcode",
+		"Rojkovi",
 		"skeletonlabs",
 		"spinkarna",
 		"Spinkárna",
