--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@types/leaflet": "^1.9.3",
 		"leaflet": "^1.9.4",
 		"leaflet-textpath": "^1.2.3",
+		"postgres": "^3.4.4",
 		"supabase": "^1.74.2",
 		"svelte-dnd-action": "^0.9.31"
 	}
