--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ghbnav",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/bcrypt": "^5.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -36,17 +37,12 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/auth-helpers-svelte": "^0.4.6",
-		"@supabase/auth-helpers-sveltekit": "^0.10.1",
-		"@supabase/auth-ui-shared": "^0.1.6",
-		"@supabase/auth-ui-svelte": "^0.2.2",
-		"@supabase/supabase-js": "^2.26.0",
 		"@types/geojson": "^7946.0.10",
 		"@types/leaflet": "^1.9.3",
+		"bcrypt": "^5.1.1",
 		"leaflet": "^1.9.4",
 		"leaflet-textpath": "^1.2.3",
 		"postgres": "^3.4.4",
-		"supabase": "^1.74.2",
 		"svelte-dnd-action": "^0.9.31"
 	}
 }
