--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@floating-ui/dom": "^1.4.2",
-		"@svelte-put/qr": "^1.0.3",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.5.0",
+		"@floating-ui/dom": "^1.6.7",
+		"@svelte-put/qr": "^1.2.1",
+		"@sveltejs/adapter-vercel": "^5.4.1",
+		"@sveltejs/kit": "^2.5.18",
 		"@types/bcrypt": "^5.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"daisyui": "^3.9.4",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.26.0",
-		"postcss": "^8.4.24",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"@typescript-eslint/eslint-plugin": "^7.16.0",
+		"@typescript-eslint/parser": "^7.16.0",
+		"autoprefixer": "^10.4.19",
+		"daisyui": "^4.12.10",
+		"eslint": "^9.7.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.42.0",
+		"postcss": "^8.4.39",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.5",
+		"svelte": "^4.2.18",
+		"svelte-check": "^3.8.4",
+		"tailwindcss": "^3.4.4",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.3",
+		"vite": "^5.3.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@types/geojson": "^7946.0.10",
-		"@types/leaflet": "^1.9.3",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/geojson": "^7946.0.14",
+		"@types/leaflet": "^1.9.12",
+		"@vercel/speed-insights": "^1.0.12",
 		"bcrypt": "^5.1.1",
 		"leaflet": "^1.9.4",
 		"leaflet-textpath": "^1.2.3",
 		"postgres": "^3.4.4",
-		"svelte-dnd-action": "^0.9.31"
+		"svelte-dnd-action": "^0.9.49"
 	}
 }
