Removed correct user password getter, clean-up

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ PSQL_PASSWORD=""
 PSQL_HOST=""
 PSQL_PORT=""
 PSQL_DATABASE=""
-POSTGRES_JS_SETTINGS_IDLE_TIMEOUT="5"
-POSTGRES_JS_SETTINGS_MAX_LIFETIME="30"
+POSTGRES_JS_SETTINGS_IDLE_TIMEOUT="0"
+POSTGRES_JS_SETTINGS_MAX_LIFETIME="null"
