--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-stuff.lnk
 secret.txt
+TODO.txt
 .vscode
 postgres_server.bat
