fix better URL handling when creating QR codes

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ POSTGRES_JS_SETTINGS_MAX_LIFETIME="null"
 
 # Application
 PUBLIC_QR_ICON_URL="" # Icon for loading QR code logos
+PUBLIC_QR_CODE_URL="" # Website address for the qr code target (https://example.com)
