--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler"
-
-	}
+	},
+	"include": ["src/**/*.ts", "src/**/*.svelte", "./.svelte-kit/types/**/*.d.ts"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
