--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/geojson": "^7946.0.14",
 		"@types/leaflet": "^1.9.12",
+		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.0.12",
 		"bcrypt": "^5.1.1",
 		"leaflet": "^1.9.4",
